# CNC_marker

./: CMakeLists.txt  OutputFile.ngc  README.md  TestGcodeFile.ngc  errors_gcodeSender.txt  package.xml
launch/: General_Linux.launch  KeyBoardInput.launch  Marker.launch  Marker_copy400.launch  Ubuntu_Marker.launch  demo.launch  demo2.launch  demo_rpi.launch  gCodeSender.launch  run.launch  run2025.launch
src/: GcodeGenerator.cpp  GcodeText.txt  HowTo.txt  KeyboarInput.py  Start_Up_Issue.txt  da_stuff.txt  gCodeSender.py  gCodeSender_newfeilure.py  gCodeSender_simple_working.py  grbl.gcode  keyboard_lib_change.py  led_actuator.py  line_feed_2.py  line_feed_gcode.py  listenercpp.cpp  manager.py  managerTWO.py  manager_orig.py  new_manager.py  old_manager.py  stop_start.sh
src/Characters/: A.ngc  A_orig.ngc  B.ngc  C.ngc  M.ngc  OutputFile.ngc  R.ngc  characters_Gcode.txt  test_batman .gcode
src/Characters/OLD_ones/: A+B+C.ngc  C.ngc
src/drivers/: i2c_dev.py
src/lib/text_parser/: CMakeLists.txt  csv_row.cpp  csv_row.h  gcode_parser.cpp  gcode_parser.h  main.cpp
src/others/: listener.py  managerBackUp.py  talker.cpp  thread.py
src/others/ALL_Arduino_GRBL/: config.txt  grbl-servo-robotinni.tar
src/others/ALL_Arduino_GRBL/grblUpload_MIO/: grblUpload_MIO.ino
